// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalSelectionLink does not have global selection values in query 1`] = `
<GlobalSelectionLink
  to="http://some.url/"
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to="http://some.url/"
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      Go somewhere!
    </a>
  </Link>
</GlobalSelectionLink>
`;

exports[`GlobalSelectionLink has global selection values in query 1`] = `
<GlobalSelectionLink
  to="http://some.url/"
>
  <Link
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "http://some.url/",
        "query": Object {
          "environment": "staging",
          "project": Array [
            "foo",
            "bar",
          ],
        },
      }
    }
  >
    <a
      onClick={[Function]}
      style={Object {}}
    >
      Go somewhere!
    </a>
  </Link>
</GlobalSelectionLink>
`;
